# vdc

./: .gitignore  Cargo.toml  Makefile.toml  README.md  RELEASES.md  SECURITY.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml  tmp.json
.cargo/: config.toml
.github/workflows/: ci.yaml  publish.yaml
crates/core/: Cargo.toml
crates/core/src/: api.rs  blockstore.rs  datastore.rs  did.rs  html.rs  http.rs  lib.rs  state.rs  urlencode.rs
crates/datastore/: Cargo.toml  README.md
crates/datastore/src/: cid.rs  data.rs  index.rs  ipfs.rs  lib.rs  query.rs  store.rs
crates/provider/: Cargo.toml
crates/provider/data/verifier/: verifier.json
crates/provider/src/: blockstore.rs  identity.rs  issuer.rs  keystore.rs  lib.rs  verifier.rs  wallet.rs
crates/status/: Cargo.toml  README.md
crates/status/src/: error.rs  handlers.rs  issue.rs  lib.rs  provider.rs  verify.rs
crates/status/src/handlers/: statuslist.rs
crates/test-providers/: Cargo.toml
crates/test-providers/src/: blockstore.rs  identity.rs  issuer.rs  keystore.rs  lib.rs  verifier.rs  wallet.rs
crates/test-utils/: Cargo.toml
crates/test-utils/data/: alice-datasets.json  bob-datasets.json  client-metadata.json  issuer.json  verifier-metadata.json
crates/test-utils/data/issuer/: client.json  issuer.json  server.json  verifier.json
crates/test-utils/src/: blockstore.rs  datastore.rs  identity.rs  issuer.rs  lib.rs  providers.rs  resources.rs  store.rs  vault.rs  verifier.rs  wallet.rs
crates/test-utils/src/providers/: issuer.rs  verifier.rs  wallet.rs
crates/test-utils/src/resources/: identity.rs  store.rs  vault.rs
crates/vdc/: Cargo.toml
crates/vdc/src/: dcql.rs  lib.rs  mso_mdoc.rs  sd_jwt.rs  serde_cbor.rs  w3c_vc.rs
crates/vdc/src/mso_mdoc/: cose.rs  issue.rs  present.rs  store.rs  verify.rs
crates/vdc/src/sd_jwt/: issue.rs  present.rs  store.rs  verify.rs
crates/vdc/src/w3c_vc/: issue.rs  present.rs  store.rs  verify.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: handlers.rs  lib.rs  provider.rs
crates/wallet/src/handlers/: issuance.rs  presentation.rs
data/: issuer.json
examples/: Cargo.toml  issuer.rs  verifier.rs
examples/blockstore/: mod.rs
examples/http/: issuer.rs  verifier.rs
examples/issuer/: Cargo.toml  axum.rs  mod.rs
examples/issuer/data/: mod.rs  normal-user.json  pending-user.json
examples/issuer/provider/: block_store.rs  mod.rs  store.rs
examples/issuer/src/: main.rs  provider.rs
examples/issuer/src/provider/: auth.rs  store.rs
examples/kms/: mod.rs
examples/src/: issuer.rs  main.rs  verifier.rs  wallet.rs
examples/src/cmd/: automated.rs  interactive.rs
examples/verifier/: Cargo.toml  axum.rs
examples/verifier/data/: mod.rs  verifier.json
examples/verifier/provider/: mod.rs
examples/verifier/src/: main.rs  provider.rs
examples/verifier/src/provider/: auth.rs
examples/wallet/: mod.rs
examples/wallet/data/: credentials.json
oid4vci/: Cargo.toml  README.md
oid4vci/examples/: issuer.rs  wallet.rs
oid4vci/src/: error.rs  handlers.rs  lib.rs  oauth.rs  provider.rs  state.rs  types.rs
oid4vci/src/common/: state.rs
oid4vci/src/handlers/: authorize.rs  create_offer.rs  credential.rs  credential_offer.rs  deferred.rs  issuer.rs  metadata.rs  nonce.rs  notification.rs  par.rs  register.rs  server.rs  token.rs
oid4vci/src/issuer/: metadata.rs
oid4vci/src/types/: authorization.rs  credential.rs  credential_offer.rs  metadata.rs  notification.rs  token.rs
oid4vci/src/wallet/: authorization.rs  token.rs
oid4vci/tests/: deferred.rs  issuance.rs  pre_authorized.rs
oid4vci/tests/archived/: authorize.rs  credential.rs  metadata.rs  par.rs  token.rs
oid4vp/: Cargo.toml  README.md
oid4vp/examples/: verifier.rs  wallet.rs
oid4vp/src/: common.rs  error.rs  generate.rs  handlers.rs  lib.rs  oauth.rs  provider.rs  state.rs  types.rs  vp_token.rs
oid4vp/src/handlers/: create_request.rs  metadata.rs  request_uri.rs  response.rs  vp_data.rs
oid4vp/src/types/: metadata.rs  request.rs  response.rs  vp_data.rs
oid4vp/src/wallet/: response.rs  vp_token.rs
oid4vp/tests/: dcql.rs  verify.rs
oid4vp/tests/archived/: create_request.rs  metadata.rs  request_object.rs  response.rs
openid/: Cargo.toml
openid/examples/: issuer.rs  verifier.rs
openid/src/: common.rs
openid/tests/: vci_deferred.rs  vci_issuance.rs  vci_pre_auth.rs  vp_dcql.rs  vp_verify.rs
openid4vci/: Cargo.toml
openid4vci/examples/: issuer.rs
openid4vci/src/: error.rs  lib.rs  oauth.rs  pkce.rs  provider.rs
openid4vci/tests/: deferred.rs  issuance.rs  pre_authorized.rs
openid4vp/: Cargo.toml
openid4vp/examples/: verifier.rs
openid4vp/src/: error.rs  lib.rs  provider.rs  wallet.rs
openid4vp/src/common/: state.rs
openid4vp/src/handlers/: metadata.rs
openid4vp/src/verifier/: request.rs
openid4vp/src/wallet/: metadata.rs
openid4vp/tests/: vp_dcql.rs
openid4vp/tests/archived/: metadata.rs
src/: common.rs  core.rs  dc_sd_jwt.rs  dif_exch.rs  endpoint.rs  format.rs  lib.rs  mso_mdoc.rs  oauth.rs  oid4vci.rs  oid4vp.rs  sd_jwt.rs  sd_jwt_vc.rs  status.rs  token_status.rs  vdc.rs  w3c.rs  w3c_vc.rs
src/common/: urlencode.rs
src/core/: api.rs  blockstore.rs  endpoint.rs  http.rs  serde_cbor.rs  state.rs  urlencode.rs  vc.rs  vp.rs
src/format/: mso_mdoc.rs  sd_jwt.rs  w3c.rs  w3c_vc.rs
src/mso_mdoc/: issue.rs  mdoc.rs  mso.rs  present.rs  store.rs
src/oid4vci/: client.rs  endpoint.rs  error.rs  handlers.rs  issuer.rs  pkce.rs  provider.rs  state.rs  types.rs  wallet.rs
src/oid4vp/: client.rs  dcql.rs  endpoint.rs  error.rs  handlers.rs  provider.rs  query.rs  types.rs  verifier.rs  vp_token.rs  wallet.rs
src/sd_jwt/: issue.rs  present.rs  store.rs  verify.rs
src/status/: bitstring.rs  config.rs  issue.rs  issuer.rs  log.rs  token.rs  verifier.rs  verify.rs
src/token_status/: endpoint.rs  issue.rs  (+1 more)
status/: Cargo.toml
supply-chain/: README.md  audits.toml  config.toml
tests/: credentials.rs  deferred_issuance.rs  pre_authorized.rs  vci_deferred.rs  vci_issuance.rs  vci_pre_auth.rs  vp_dcql.rs  vp_verify.rs
(+234 files in other folders)
