[workspace]
members = ["oid4vci", "oid4vp", "examples", "crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["authentication", "cryptography", "data-structures"]
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/vc"
rust-version = "1.87"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64ct = { version = "1.7.3", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
ciborium = "0.2.2"
credibil-core = { path = "crates/core" }
credibil-identity = { git = "https://github.com/credibil/identity.git" }
credibil-jose = { git = "https://github.com/credibil/se.git" }
credibil-se = { git = "https://github.com/credibil/se.git" }
credibil-status = { path = "crates/status" }
credibil-vdc = { path = "crates/vdc" }
http = "1.3.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
serde_repr = "0.1"
sha2 = "0.10.9"
test-utils = { path = "crates/test-utils" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.5", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["fast-rng", "v4"] }

# [patch."https://github.com/credibil/identity"]
# credibil-identity = { path = "../identity" }

[profile.release]
# optimize for small code size
lto = "thin"
opt-level = "s"
strip = "symbols"
