[workspace]
members = ["oid4vci", "oid4vp", "examples", "crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["authentication", "cryptography", "data-structures"]
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/vc"
rust-version = "1.89"
version = "0.2.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64ct = { version = "1.8.0", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
credibil-api = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-binding = { git = "https://github.com/credibil/key.git", tag = "v0.1.0" }
credibil-core = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-ecc = { git = "https://github.com/credibil/key.git", tag = "v0.1.0" }
credibil-encoding = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-jose = { git = "https://github.com/credibil/key.git", tag = "v0.1.0" }
credibil-oid4vci = { path = "oid4vci" }
credibil-oid4vp = { path = "oid4vp" }
credibil-status = { path = "crates/status" }
credibil-vdc = { path = "crates/vdc" }
cuid2 = "0.1.4"
fastrand = "2.3.0"
http = "1.3.1"
image = { version = "0.25.8", default-features = false, features = ["png"] }
oauth2 = "5.0.0"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["alloc"] }
serde_repr = "0.1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
test-utils = { path = "crates/test-utils" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }

# [patch."https://github.com/credibil/core"]
# credibil-core = { path = "../core" }

# [patch."https://github.com/credibil/key"]
# credibil-ecc = { path = "../key/ecc" }
# credibil-jose = { path = "../key/jose" }
# credibil-binding = { path = "../key/binding" }

[profile.release]
# optimize for small code size
lto = "thin"
opt-level = "s"
strip = "symbols"
