[workspace]
members = ["oid4vci", "oid4vp", "examples", "crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["authentication", "cryptography", "data-structures"]
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/vc"
rust-version = "1.90"
version = "0.3.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
nursery = "warn"
pedantic = "warn"
cargo = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64ct = { version = "1.8.0", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
cuid2 = "0.1.4"
fastrand = "2.3.0"
http = "1.3.1"
image = { version = "0.25.8", default-features = false, features = ["png"] }
oauth2 = "5.0.0"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
serde_repr = "0.1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
test-utils = { path = "crates/test-utils" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }

# credibil registry
credibil-api = { version = "0.2.1", registry = "credibil" }
credibil-binding = { version = "0.3.0", registry = "credibil" }
credibil-core = { version = "0.2.1", registry = "credibil" }
credibil-ecc = { version = "0.3.0", registry = "credibil" }
credibil-encoding = { version = "0.2.1", registry = "credibil" }
credibil-jose = { version = "0.3.0", registry = "credibil" }

# internal references
credibil-oid4vci = { path = "oid4vci", version = "0.3.0", registry = "credibil" }
credibil-oid4vp = { path = "oid4vp", version = "0.3.0", registry = "credibil" }
credibil-status = { path = "crates/status", version = "0.3.0", registry = "credibil" }
credibil-vdc = { path = "crates/vdc", version = "0.3.0", registry = "credibil" }

# [patch."https://github.com/credibil/core"]
# credibil-core = { path = "../core" }

# [patch."https://github.com/credibil/key"]
# credibil-ecc = { path = "../key/ecc" }
# credibil-jose = { path = "../key/jose" }
# credibil-binding = { path = "../key/binding" }

[profile.release]
# optimize for small code size
lto = "thin"
opt-level = "s"
strip = "symbols"
