[package]
name = "examples"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "interactive"
path = "src/cmd/interactive.rs"

[[bin]]
name = "automated"
path = "src/cmd/automated.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
credibil-binding.workspace = true
credibil-encoding.workspace = true
credibil-oid4vci.workspace = true
credibil-oid4vp.workspace = true
http.workspace = true
oauth2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
test-utils.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
