[package]
name = "credibil-oid4vci"
description = "OpenID for Verifiable Credential Issuance and Verifiable Presentation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["issuer", "verifier"]
issuer = []
verifier = []
wasm = ["fastrand/js"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
credibil-binding.workspace = true
credibil-core.workspace = true
credibil-ecc.workspace = true
credibil-jose.workspace = true
credibil-status.workspace = true
credibil-vdc.workspace = true
fastrand = "2.3.0"
http.workspace = true
image = { version = "0.25.6", default-features = false, features = ["png"] }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
axum-extra.workspace = true
oauth2 = { version = "5.0.0" }
reqwest.workspace = true
test-utils.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
