[package]
name = "credibil-oid4vp"
description = "OpenID for Verifiable Presentations"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["issuer", "verifier"]
issuer = []
verifier = []
wasm = ["fastrand/js"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
credibil-api.workspace = true
credibil-binding.workspace = true
credibil-core.workspace = true
credibil-ecc.workspace = true
credibil-encoding.workspace = true
credibil-jose.workspace = true
credibil-status.workspace = true
credibil-vdc.workspace = true
fastrand.workspace = true
image.workspace = true
qrcode.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true

[dev-dependencies]
axum.workspace = true
axum-extra.workspace = true
test-utils.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
