[package]
name = "credibil-openid4vp"
description = "OpenID for Verifiable Presentations"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["issuer", "verifier"]
issuer = []
verifier = []
wasm = ["fastrand/js"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
credibil-core.workspace = true
credibil-identity.workspace = true
credibil-jose.workspace = true
credibil-se.workspace = true
credibil-status.workspace = true
credibil-vdc.workspace = true
fastrand = "2.3.0"
http.workspace = true
image = { version = "0.25.6", default-features = false, features = ["png"] }
# percent-encoding = "2.3.1"
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
hex = "0.4.3"
oauth2 = { version = "5.0.0" }
test-providers.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["cors", "set-header", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[[example]]
name = "verifier"
path = "examples/verifier.rs"
# required-features = ["client", "server"]
