[package]
name = "credibil-core"
description = "Credibil core components"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
bytes = "1.10.1"
credibil-identity.workspace = true
credibil-jose.workspace = true
http.workspace = true
http-body = "1.0.1"
http-body-util = "0.1"
percent-encoding = "2.3.1"
serde.workspace = true
serde_json.workspace = true
