[package]
name = "datastore"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.40", features = ["serde"] }
ciborium = "0.2.2"
# cid.workspace = true
cid = { version = "0.11.1", features = ["alloc"] }
# futures.workspace = true
futures = "0.3.31"
ipld-core = "0.4.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
serde.workspace = true
serde_ipld_dagcbor = "0.6.2"
