[package]
name = "datastore"
edition = "2024"
publish = false
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
ciborium = "0.2.2"
cid = { version = "0.11.1", features = ["alloc"] }
futures = "0.3.31"
ipld-core = "0.4.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "0.6.2"
