[package]
name = "provider"
edition = "2024"
publish = false
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64ct.workspace = true
blockstore = "0.7.1"
chrono = { version = "0.4.40", features = ["serde"] }
ciborium = "0.2.2"
cid = { version = "0.11.1", features = ["alloc"] }
credibil-did.workspace = true
credibil-infosec.workspace = true
credibil-vc.workspace = true
ed25519-dalek.workspace = true
futures = "0.3.31"
insta = { version = "1.42.2", features = ["redactions", "yaml"] }
ipld-core = "0.4.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
oauth2 = { version = "5.0.0" }
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "0.6.3"
serde_json.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "set-header", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
x25519-dalek.workspace = true
