[package]
name = "provider"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
base64ct.workspace = true
blockstore = "0.7.1"
credibil-identity.workspace = true
credibil-jose.workspace = true
credibil-se.workspace = true
credibil-vc.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde_json.workspace = true
test-kms.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
