[package]
name = "credibil-status"
description = "Verifiable digital credential status"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
bitvec = "1.0.1"
chrono.workspace = true
credibil-api.workspace = true
credibil-binding.workspace = true
credibil-jose.workspace = true
flate2 = "1.1.2"
serde.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
