[package]
name = "test-providers"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
base64ct.workspace = true
blockstore = "0.7.1"
credibil-identity.workspace = true
credibil-jose.workspace = true
credibil-se.workspace = true
credibil-vc.workspace = true
rand_core.workspace = true
serde_json.workspace = true
test-kms = { git = "https://github.com/credibil/se.git" }
uuid.workspace=true
