[package]
name = "test-providers"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
blockstore = "0.7.1"
credibil-core.workspace = true
credibil-identity.workspace = true
credibil-jose.workspace = true
credibil-se.workspace = true
credibil-status.workspace = true
credibil-vdc.workspace = true
serde_json.workspace = true
test-kms = { git = "https://github.com/credibil/se.git" }
uuid.workspace = true
