[package]
name = "test-utils"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
ciborium = "0.2.2"
cid = { version = "0.11.1", features = ["alloc"] }
credibil-core.workspace = true
credibil-ecc.workspace = true
credibil-identity.workspace = true
credibil-vdc.workspace = true
dashmap = "6.1.0"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
