[package]
name = "test-utils"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
ciborium = "0.2.2"
cid = { version = "0.11.1", features = ["alloc"] }
credibil-binding.workspace = true
credibil-core.workspace = true
credibil-ecc.workspace = true
credibil-oid4vci.workspace = true
credibil-oid4vp.workspace = true
credibil-vdc.workspace = true
dashmap = "6.1.0"
http.workspace = true
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
