[package]
name = "test-utils"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
credibil-binding.workspace = true
credibil-ecc.workspace = true
credibil-oid4vci.workspace = true
credibil-oid4vp.workspace = true
credibil-vdc.workspace = true
dashmap = "6.1.0"
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
